<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="single_Player">Single Player</string>
    <string name="online">Online</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="let_s_see_who_wins">Let\'s see who wins.</string>
    <string name="good_luck">good luck!</string>
    <string name="scissors">SCISSORS</string>
    <string name="paper">PAPER</string>
    <string name="rock">ROCK</string>
    <string name="your_score_0_computer_score_0">Your Score: 0 Computer Score: 0</string>
    <string name="computer_choice">COMPUTER CHOICE</string>
    <string name="your_choice">YOUR CHOICE</string>
    <string name="todo">TODO</string>
    <string name="id">ID</string>
    <string name="send_request_to">Send request to</string>
    <string name="accept_request_from">Accept request from</string>
    <string name="title_activity_fast">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


        <string name="info">
            INFO:\nIn this application you can play TicTacToe,Fast Screen Tapping Game and also Stone Paper Scissors.TicTacToe is available with multiplayer mode by which you can play with your friends online and can invite them to the game\n
        Developed by:kkrish N A \ncontact through:\nE-mail:bestkkrish@gmail.com\nInstagram:click the link below</string>
    <string name="insta"> <a href="https://www.instagram.com/kkrish_n/?hl=en">kkrish_n</a></string>

</resources>

