<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:drawable="@android:color/primary_text_light"
    tools:context=".OnlineLoginActivity">


    <TextView
        android:id="@+id/tvLoginUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/id"
        android:textColor="#21abcd"
        android:textAlignment="center"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/tvSendRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/send_request_to"
                android:textColor="#21abcd"
                android:textSize="12sp" />

            <ListView
                android:id="@+id/lv_loginUsers"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/tvAcceptRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/accept_request_from"
                android:textColor="#21abcd"
                android:textSize="12sp" />

            <ListView
                android:id="@+id/lv_requestedUsers"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>












    <!--
    <ListView
        android:id="@+id/lv_loginUsers"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    -->
</LinearLayout>
